Explicitly add the keystoneEndpoint to the GlanceAPI template
This patch explicitly adds the keystoneEndpoint parameter in the
glanceAPI template to indicate that people can add multiple instances
and switch the endpoint. Even though it's not a feature we currently
expose, it's a good thing to have there

Signed-off-by: Francesco Pantano <fpantano@redhat.com>

--- a/va/hci/stage4/openstackcontrolplane.yaml
+++ b/va/hci/stage4/openstackcontrolplane.yaml
@@ -92,6 +92,7 @@ spec:
                 type: LoadBalancer
       storageClass: ""
       storageRequest: 10G
+      keystoneEndpoint: default
   heat:
     apiOverride:
       route: {}
