--- a/va/hci/stage6/openstackcontrolplane.yaml
+++ b/va/hci/stage6/openstackcontrolplane.yaml
@@ -108,6 +108,7 @@ spec:
                   metallb.universe.tf/loadBalancerIPs: 172.17.0.80
               spec:
                 type: LoadBalancer
+      keystoneEndpoint: default
       storageClass: ""
       storageRequest: 10G
       customServiceConfig: |
